# MirrorCast

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/screenrecord/: CMakeLists.txt  EglWindow.cpp  FrameOutput.cpp  Overlay.cpp  Program.cpp  Program.h  TextRenderer.cpp  screenrecord.cpp
app/src/main/cpp/screenrecord/gui/: BufferItem.h
app/src/main/cpp/screenrecord/media/openmax/: OMX_Audio.h  OMX_AudioExt.h  OMX_Core.h  OMX_IndexExt.h  OMX_VideoExt.h
app/src/main/cpp/screenrecord/media/stagefright/: ACodec.h  CodecBase.h  MediaCodec.h  MediaExtractor.h  MetaDataBase.h  NuMediaExtractor.h  RemoteMediaExtractor.h
app/src/main/cpp/screenrecord/media/stagefright/foundation/: MediaDefs.h
app/src/main/cpp/screenrecord/utils/: Log.h
app/src/main/cpp/socket/: CMakeLists.txt  MediaClient.cpp  MediaClient.h  MediaCodec.cpp  MediaCodec.h  MediaData.cpp  MediaData.h  MediaServer.cpp  MediaServer.h  MyJni.cpp  MyJni.h
app/src/main/cpp/socket/include/: Log.h
app/src/main/java/com/weidi/mirrorcast/: AVPacket.java  BlackListHelper.java  Constants.java  EDMediaCodec.java  EventBusUtils.java  JniObject.java  MainActivity.java  MediaClient.java  MediaClientService.java  MediaServer.java  MediaServerService.java  MediaUtils.java  MimeTypes.java  MyApplication.java  MyJni.java  NetWorkReceiver.java  Phone.java  PlayerActivity.java  SpsPps.java  WiFiDirectBroadcastReceiver.java
app/src/main/java/com/weidi/mirrorcast/zhangteng/decode/: Frame.java  H264AacDecoder.java
app/src/main/java/com/weidi/mirrorcast/zhangteng/encode/: Encode.java  Frame.java
app/src/main/java/com/weidi/mirrorcast/zhangteng/packets/: Chunk.java  ChunkHeader.java  ChunkType.java  ContentData.java  MessageType.java  SessionInfo.java  Util.java  Video.java
app/src/main/res/drawable/: item_bg_focused.xml  item_bg_hovered.xml  item_bg_normal.xml  item_bg_pressed.xml  item_bg_selector.xml
app/src/main/res/layout/: activity_main.xml  activity_player.xml  transparent_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
baseLib/: build.gradle
baseLib/src/androidTest/java/com/sony/baselib/: ExampleInstrumentedTest.kt
baseLib/src/main/: AndroidManifest.xml
baseLib/src/main/java/com/sony/baselib/: BaseReceiver.kt  DExecutor.kt  DLog.kt  DPermission.kt
baseLib/src/test/java/com/sony/baselib/: ExampleUnitTest.kt
ext/keystore/: platform.jks  sony-general-app.jks
p2pLib/: build.gradle
p2pLib/src/androidTest/java/com/sony/p2plib/: ExampleInstrumentedTest.kt
p2pLib/src/main/: AndroidManifest.xml
p2pLib/src/main/java/android/net/wifi/p2p/: WifiP2pManager.java  WifiP2pWfdInfo.java
p2pLib/src/main/java/com/sony/p2plib/: RandomColor.kt
p2pLib/src/main/java/com/sony/p2plib/activity/: BaseActivity.java  ClientSendActivity.java  DeviceAdapter.java  Errno.java  MySurfaceView.java  NetUtils.java  ServerReceiveActivity.java  WfdConstants.java  WifiDisplaySourceActivity.java  WifiP2PActivity.java
p2pLib/src/main/java/com/sony/p2plib/p2phelper/: WifiP2PBroadCastReceiver.java  WifiP2PHelper.java  WifiP2PListener.java
p2pLib/src/main/java/com/sony/p2plib/sockethelper/: ClientSocketHelper.java  IOHelper.java  ServerSocketHelper.java  SocketBase.java
p2pLib/src/main/res/layout/: activity_client_send.xml  activity_wifi_display_source.xml
p2pLib/src/test/java/com/sony/p2plib/: ExampleUnitTest.kt
